ajout photos PCBs

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -20,7 +20,7 @@ L'objectif est de réaliser un filtre passe-bas dont le gabarit est donné à la
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.5\linewidth]{ressources/gabarit_passe_pas}
+	\includegraphics[width=0.5\linewidth]{photo/gabarit_PB.png}
 	\caption{Gabarit filtre passe bas équivalent}
 	\label{fig:gabarit_PasseBas}
 \end{figure}
@@ -123,6 +123,120 @@ Le tableau ci-dessous donne les applications numériques pour les composants du 
 	\caption{Valeurs réelles des composants du filtre passe-bas.}
 	\label{tab:valeurs_composant_passe_bas}
 \end{table}
+
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=9cm]{photo/passe_bas_vic/schema_localise_passe_bas_ads.png}
+	\caption{Filtre passe-bas avec des éléments idéaux.}
+	\label{fig:schema_localise_passe_bas_ads}
+\end{figure}
+
+
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}[b]{0.49\textwidth}
+		\includegraphics[width=\textwidth]{photo/passe_bas_vic/simu_passe_bas_localise.PNG}
+		\caption{Sans zoom}
+		\label{fig:simu_passe_bas_localise}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.49\textwidth}
+		\includegraphics[width=\textwidth]{photo/passe_bas_vic/simu_zoom_passe_bas_localise.PNG}
+		\caption{Avec zoom sur la bande passante}
+		\label{fig:simu_zoom_passe_bas_localise}
+	\end{subfigure}
+	\caption{Simulation du module du coefficient de transmission S21 en dB}
+%	\label{fig:observation_registres_internes}
+\end{figure}
+
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=15cm]{photo/passe_bas_vic/schema_distribue_passe_bas_ads.png}
+	\caption{Filtre passe-bas en technologie micro ruban.}
+	\label{fig:schema_distribue_passe_bas_ads}
+\end{figure}
+
+
+
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}[b]{0.49\textwidth}
+		\includegraphics[width=\textwidth]{photo/passe_bas_vic/simu_passe_bas_distribue.PNG}
+		\caption{Sans zoom}
+		\label{fig:simu_passe_bas_distribue}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.49\textwidth}
+		\includegraphics[width=\textwidth]{photo/passe_bas_vic/simu_zoom_passe_bas_distribue.PNG}
+		\caption{Avec zoom sur la bande passante}
+		\label{fig:simu_zoom_passe_bas_distribue}
+	\end{subfigure}
+	\caption{Simulation du module du coefficient de transmission S43 en dB}
+	%	\label{fig:observation_registres_internes}
+\end{figure}
+
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=15cm]{photo/passe_bas_vic/schema_distribue_ameliore_passe_bas_ads.png}
+	\caption{Filtre passe-bas amélioré en technologie micro ruban.}
+	\label{fig:schema_distribue_ameliore_passe_bas_ads}
+\end{figure}
+
+
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}[b]{0.49\textwidth}
+		\includegraphics[width=\textwidth]{photo/passe_bas_vic/simu_passe_bas_distribue_ameliore.PNG}
+		\caption{Sans zoom}
+		\label{fig:simu_passe_bas_distribue_ameliore}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.49\textwidth}
+		\includegraphics[width=\textwidth]{photo/passe_bas_vic/simu_zoom_passe_bas_distribue_ameliore.PNG}
+		\caption{Avec zoom sur la bande passante}
+		\label{fig:simu_zoom_passe_bas_distribue_ameliore}
+	\end{subfigure}
+	\caption{Simulation du module du coefficient de transmission S43 en dB}
+	%	\label{fig:observation_registres_internes}
+\end{figure}
+
+
+
+
+
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}[b]{0.49\textwidth}
+		\includegraphics[width=\textwidth]{photo/passe_bas_vic/simu_passe_bas_reel_tche_epoxy.PNG}
+		\caption{Sans zoom}
+		\label{fig:simu_passe_bas_reel_tche_epoxy}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.49\textwidth}
+		\includegraphics[width=\textwidth]{photo/passe_bas_vic/simu_zoom_passe_bas_reel_tche_epoxy.PNG}
+		\caption{Avec zoom sur la bande passante}
+		\label{fig:simu_zoom_passe_bas_distribue_ameliore}
+	\end{subfigure}
+	\caption{Module du coefficient de transmission S65 en dB d'un filtre passe-bas sur substrat epoxy}
+	%	\label{fig:observation_registres_internes}
+\end{figure}
+
+
+
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}[b]{0.49\textwidth}
+		\includegraphics[width=\textwidth]{photo/passe_bas_vic/simu_passe_bas_reel_tche_teflon.PNG}
+		\caption{Sans zoom}
+		\label{fig:simu_passe_bas_reel_tche_teflon}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.49\textwidth}
+		\includegraphics[width=\textwidth]{photo/passe_bas_vic/simu_zoom_passe_bas_reel_tche_teflon.PNG}
+		\caption{Avec zoom sur la bande passante}
+		\label{fig:simu_zoom_passe_bas_reel_tche_teflon}
+	\end{subfigure}
+	\caption{Module du coefficient de transmission S65 en dB d'un filtre passe-bas sur substrat teflon}
+	%	\label{fig:observation_registres_internes}
+\end{figure}
 
 
 
