Rédaction + ajout ressources
Création schéma modèle caractérisation et ajout .tex dans ressources

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -59,6 +59,13 @@ Il s'agit dans cette partie de réaliser des caractérisations de lignes, c'est-
 
 \subsection{Présentation du modèle théorique de caractérisation de lignes}
 
+\begin{figure}[H]
+	\centering
+	\input{ressources/schema_modele_caract.tex}
+	\caption{Schéma représentatif du modèle de caractérisation de lignes}
+	\label{fig:schema_modele_caract}
+\end{figure}
+
 \newpage
 
 \section{Synthèse de filtre passe-bas en technologie }
