--- a/rapport/titre.tex
+++ b/rapport/titre.tex
@@ -8,7 +8,7 @@
 \begin{minipage}{.47\textwidth}
 \centering
 \begin{flushleft}
-\includegraphics[width=0.75\textwidth]{./photo/logo_univ}
+\includegraphics[width=0.75\textwidth]{./photo/nantes_universite_logo.png}
 \end{flushleft}
 \end{minipage}
 \begin{minipage}{.47\textwidth}
@@ -30,7 +30,7 @@
     \huge
     \textbf{#1}\\ %Titre
   \end{center}
-  \textbf{\\ Projet Transversal}\\ %matière
+  %\textbf{\\ Projet Transversal}\\ %matière
   \HRule \\[1.5cm]
   
 %  \vspace*{\stretch{5}}
@@ -58,16 +58,14 @@
 		\begin{flushleft} \large
         	\noindent Rédigé par\\ %\Redac
 			Victor DUFRENE \\
-			Anthelme BOUTRY\\
+			Mathis BRIARD\\
 			Louison GOUY\\
-			Kedai WANG\\
-			Huanqing LIN
+			Yujie HUANG
 		\end{flushleft}
 	\end{minipage}
 	\begin{minipage}{0.4\textwidth}
 		\begin{flushright}\large
-			Client : Loïc MARTIN\\
-			Professeur encadrant : \\Yann MAHE\\ Tchanguiz RAZBAN\\
+			Professeur encadrant : \\Yann MAHE\\ Anne CHOUSSEAUD\\
 						
 		\end{flushright}
 	\end{minipage}
