--- a/rapport/ressources/schema_modele_caract.tex
+++ b/rapport/ressources/schema_modele_caract.tex
@@ -1,4 +1,4 @@
-\begin{circuitikz}
+\begin{circuitikz}[scale=0.90]
 	\draw (1,-0.5) to (1,0.5);
 	\draw (1,0.5) to (-1,0.5);
 	\draw (-1,0.5) to (-1,-0.5);
