--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -695,7 +695,9 @@ Une fois le coefficient de dénormalisation appliqué nous obtenons les valeurs 
 	\label{tab:valeurs_composant_passe_bas}
 \end{table}
 
-
+\cite{cours_MF} \cite{cours_HF}
+\bibliography{bib_hf}{}
+\bibliographystyle{plain}
 \newpage
 
 \section*{Annexes}
@@ -706,6 +708,7 @@ Une fois le coefficient de dénormalisation appliqué nous obtenons les valeurs 
 \begin{center}
 	Annexe 1 : Photographies de plaques avec des lignes de caractérisation (à gauche plaque en verre téflon et à gauche en verre epoxy FR4)
 \end{center}
+
 
 
 \end{document}
